--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oboylar Dunyosi</title>
-    <link rel="icon" href="./src/Images/logo.png">
+    <link rel="icon" href="./src/Images/icon logo.png">
   </head>
   <body>
     <div id="root"></div>
